[package]
name = "cross-socket"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "[WIP] Cross-platform library for rawsocket. cross-socket allows you to receiving, building and sending raw packets."
repository = "https://github.com/shellrow/cross-socket"
readme = "README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = "0.17"
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.34"
privilege = "0.3"
chrono = "0.4"

sha2 = { version = "0.10", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
inquire = { version = "0.6", optional = true }
home = { version = "0.5", optional = true }
zip = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.50", optional = true }

[features]
default = ["setup"]
setup = ["sha2", "reqwest", "inquire", "home", "zip", "winreg"]
