[package]
name = "cross-socket"
version = "0.0.1"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "[WIP] Cross-platform library for rawsocket. cross-socket allows you to receiving, building and sending raw packets."
repository = "https://github.com/shellrow/cross-socket"
readme = "README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
default-net = "0.17"
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.34"
privilege = "0.3"
chrono = "0.4"
async-io = "1.13"
cross-socket-deps = { path = "deps", version = "0.0.1", optional = true }

[features]
default = ["setup"]
setup = ["cross-socket-deps"]

[[example]]
name = "arp"
path = "examples/arp.rs"

[[example]]
name = "icmp_ping"
path = "examples/icmp_ping.rs"

[[example]]
name = "tcp_ping"
path = "examples/tcp_ping.rs"

[[example]]
name = "dump"
path = "examples/dump.rs"

[[example]]
name = "handle"
path = "examples/handle.rs"

[[example]]
name = "store"
path = "examples/store.rs"

[[example]]
name = "resolve_deps"
path = "examples/resolve_deps.rs"
required-features = ["setup"]
