[package]
name = "cross-socket"
version = "0.7.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "cross-socket is a cross-platform library designed for working with RawSocket"
repository = "https://github.com/shellrow/cross-socket"
readme = "README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
default-net = "0.18"
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.34"
chrono = "0.4"
async-io = "1.13"
cross-socket-deps = { path = "deps", version = "0.7.0", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[dev-dependencies]
ipnet = "2.7"
futures = {version = "0.3", features = ["executor", "thread-pool"]}
futures-lite = "1.13"

[features]
setup = ["cross-socket-deps"]

[[example]]
name = "icmp"
path = "examples/socket/icmp.rs"

[[example]]
name = "tcp"
path = "examples/socket/tcp.rs"

[[example]]
name = "udp"
path = "examples/socket/udp.rs"

[[example]]
name = "async_icmp"
path = "examples/async_socket/async_icmp.rs"

[[example]]
name = "arp"
path = "examples/datalink_socket/arp.rs"

[[example]]
name = "icmp_ping"
path = "examples/datalink_socket/icmp_ping.rs"

[[example]]
name = "icmp_build"
path = "examples/datalink_socket/icmp_build.rs"

[[example]]
name = "icmpv6_build"
path = "examples/datalink_socket/icmpv6_build.rs"

[[example]]
name = "tcp_ping"
path = "examples/datalink_socket/tcp_ping.rs"

[[example]]
name = "tcp_build"
path = "examples/datalink_socket/tcp_build.rs"

[[example]]
name = "udp_ping"
path = "examples/datalink_socket/udp_ping.rs"

[[example]]
name = "dump"
path = "examples/pcap/dump.rs"

[[example]]
name = "handle"
path = "examples/pcap/handle.rs"

[[example]]
name = "store"
path = "examples/pcap/store.rs"

[[example]]
name = "resolve_deps"
path = "examples/deps/resolve_deps.rs"
required-features = ["setup"]
