[package]
name = "nesmap"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform network mapper"
repository = "https://github.com/shellrow/nesmap"
readme = "README.md"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "nesmap"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = "0.14.1"
clap = { version = "3.1", features = ["cargo"] }
indicatif = "0.16.2"
term-table = "1.3.2"
async-io = "1.6"
chrono = "0.4"
dns-lookup = "1.0"
nesmap-core = { path = "../core", version = "0.1.0"}

[package.metadata.bundle]
name = "nesmap"
identifier = "com.intsigma.nesmap"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
resources = ["resources/*"]
copyright = "Copyright (c) shellrow 2023. All rights reserved."
category = "Developer Tool"
short_description = "Cross-platform network mapper"
long_description = "Cross-platform network mapper"
osx_url_schemes = ["com.intsigma.nesmap"]
