[package]
name = "nesmap-installer"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "nesmap installer. Support install, uninstall, and update."
repository = "https://github.com/shellrow/nesmap"
readme = "README.md"

[[bin]]
name = "nesmap-installer"

[dependencies]
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
clap = { version = "3.1", features = ["cargo"] }
#indicatif = "0.16.2"
chrono = "0.4"
reqwest = "0.11"
rusqlite = { version = "0.28.0", features = ["bundled"] }
runas = "1.0.0"
home = "0.5.5"

[package.metadata.bundle]
name = "nesmap-installer"
identifier = "com.intsigma.nesmap-installer"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.1.0"
resources = ["resources/*"]
copyright = "Copyright (c) shellrow 2023. All rights reserved."
category = "Developer Tool"
short_description = "nesmap installer"
long_description = "nesmap installer"
osx_url_schemes = ["com.intsigma.nesmap-installer"]
