[package]
name = "netpulsar-core"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@intsigma.com>"]
repository = "https://github.com/shellrow/netpulsar"
documentation = "https://github.com/shellrow/netpulsar"
readme = "README.md"
license = "MIT"
description = "Core library for netpulsar and netpulsar-desktop"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
default-net = { version = "0.21", features = ["serde"] }
xenet = { version = "0.4", features = ["serde"] }
netprobe = { version = "0.4", features = ["serde", "async"] }
tokio = { version = "1.21"}
hickory-resolver = { version = "0.24" }
sysinfo = "0.29"
netstat2 = "0.9"
reqwest = { version="0.11", default-features = false, features = ["json", "rustls-tls"]}
chrono = { version = "0.4", features = ["serde"] }
ipnet = "2.5"
regex = "1.6"
crossbeam-channel = "0.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }

[[example]]
name = "parse_frame"
path = "examples/parse_frame.rs"

[[example]]
name = "parse_frame_crossbeam"
path = "examples/parse_frame_crossbeam.rs"

[[example]]
name = "parse_frame_async"
path = "examples/parse_frame_async.rs"
