[package]
name = "netpulsar"
version = "0.1.0"
authors = ["shellrow <shellrow@intsigma.com>"]
description = "Cross-platform network activity monitoring tool"
repository = "https://github.com/shellrow/netpulsar"
documentation = "https://github.com/shellrow/netpulsar"
readme = "README.md"
keywords = ["network","security","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[[bin]]
name = "netpulsar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.4", features = ["cargo"] }
crossterm = "0.27"
anyhow = "1.0"
argh = "0.1"
rand = "0.8"
color-eyre = "0.6"
palette = "0.7"
ratatui = "0.25"
netpulsar-core = { path = "../netpulsar-core", version = "0.1.0" }
