[package]
name = "netpulsar"
version = "0.3.0"
description = "NetPulsar"
authors = ["shellrow <shellrow@fortnium.com>"]
license = "MIT"
repository = "https://github.com/shellrow/netpulsar"
documentation = "https://github.com/shellrow/netpulsar"
edition = "2021"
keywords = ["network", "security", "gui", "cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "path-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = { version = "0.12", features = ["local-offset"] }
netdev = { version = "0.30", features = ["serde"] }
nex = { version = "0.18", features = ["serde"] }
tokio = { version = "1.38" }
ipstruct = "0.2"
hickory-resolver = { version = "0.24" }
futures = {version = "0.3"}
netsock = { version = "0.2", features = ["serde"] }
reqwest = { version="0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["local-offset"] }
ipnet = "2.5"
home = "0.5"
bincode = "1.3"
rangemap = "1.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
sha2 = "0.10"
zip = "0.6"
privilege = "0.3"

[features]
default = ["bundle"]
bundle = []
# tauri
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
