[package]
name = "netpulsar-desktop"
version = "0.1.0"
description = "NetPulsarDesktop"
authors = ["shellrow <shellrow@intsigma.com>"]
license = "MIT"
repository = "https://github.com/shellrow/netpulsar"
documentation = "https://github.com/shellrow/netpulsar"
edition = "2021"
keywords = ["network", "security", "gui", "cross-platform"]
categories = ["network-programming"]

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xenet = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
netpulsar-core = { path = "../../netpulsar-core", version = "0.1.0" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
